--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 body{
+    height: 100vh;
     background: url("https://cdn.pixabay.com/photo/2016/01/27/15/25/space-1164579_1280.png");
 }
 
@@ -9,4 +10,7 @@ body{
 .card-body{
     background-color: rgb(0, 229, 255);
     background-image: linear-gradient(120deg, #9fff18 50%, #18c2cb6b 100%);
+}
+.img-notfound{
+    justify-content: center;
 }
