--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,7 +14,11 @@ body{
 .img-notfound{
     justify-content: center;
 }
-.img-location{
-    max-width: 600px;
-    max-height: 600px;
+.home-container{
+    flex-grow: 1;
+}
+footer{
+    background-color: rgb(0, 229, 255);
+    background-image: linear-gradient(120deg, #9fff18 50%, #18c2cb6b 100%);
+
 }
