--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,15 +1,20 @@
+:root {
+    --main-bg-color: rgb(0, 229, 255);
+    --main-bg-img: linear-gradient(120deg, #9fff18 50%, #18c2cb6b 100%);
+  }
+ 
 body{
     height: 100vh;
     background: url("https://cdn.pixabay.com/photo/2016/01/27/15/25/space-1164579_1280.png");
 }
 
 .navbar{
-    background-color: rgb(0, 229, 255);
-    background-image: linear-gradient(120deg, #9fff18 50%, #18c2cb6b 100%);
+    background-color: var(--main-bg-color);
+    background-image: var(--main-bg-img);
 }
 .card-body{
-    background-color: rgb(0, 229, 255);
-    background-image: linear-gradient(120deg, #9fff18 50%, #18c2cb6b 100%);
+    background-color: var(--main-bg-color);
+    background-image: var(--main-bg-img);
 }
 .img-notfound{
     justify-content: center;
@@ -18,7 +23,11 @@ body{
     flex-grow: 1;
 }
 footer{
-    background-color: rgb(0, 229, 255);
-    background-image: linear-gradient(120deg, #9fff18 50%, #18c2cb6b 100%);
+    background-color: var(--main-bg-color);
+    background-image: var(--main-bg-img);
 
+}
+.btn-input{
+    background-color: var(--main-bg-color);
+    background-image: var(--main-bg-img);
 }
