--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,8 +33,6 @@ footer{
     position:absolute;
     bottom: 0;
     width: 100%;
-    
-
 }
 .btn-input{
     background-color: var(--main-bg-color);
@@ -61,3 +59,9 @@ footer{
     place-items: center;
     border-radius: 0 5px 5px 0;
   }
+.btn-fav:hover{
+    
+        transform: rotate(0) scale(1.5) translateZ(0);
+        -webkit-filter: drop-shadow(0 20px 20px  rgba(0, 0, 0, 0.70));
+        filter: drop-shadow(0 20px 20px rgba(0, 0, 0, 0.70));
+}
